@@ -1386,7 +1386,7 @@ main (int argc, char **argv)
   options->print_found_names = (int)true;
   {
     const char *base = cleaned_invocation_name(argv[0]);
-    if (FILESTRCASEEQ(base, "rmpost")){
+    if (FILESTRCASEEQ(base, "rmpost")||FILESTRCASEEQ(base, "r-mpost")){
       base++;
       restricted_mode = true;
     }
@@ -1423,7 +1423,7 @@ main (int argc, char **argv)
     kpse_set_program_enabled (kpse_mem_format, MAKE_TEX_FMT_BY_DEFAULT,
                               kpse_src_compile);
     kpse_set_program_name(argv[0], user_progname);
-    if (FILESTRCASEEQ(kpse_program_name, "rmpost"))
+    if (FILESTRCASEEQ(kpse_program_name, "rmpost")||FILESTRCASEEQ(kpse_program_name, "r-mpost"))
       kpse_program_name++;
   }
   @= /*@@=nullpass@@*/ @> 
